Added API versioning through the api_v2.php file and v2 directory in app/Http/Controllers. Also made this controller and GitHubService JSON API spec. compliant.
