# routes/api_v2.php
@@ -1,0 +1,12 @@
+<?php
+
+use App\Http\Controllers\v2\SearchController;
+use Illuminate\Support\Facades\Route;
+
+Route::get("/login", function(){
+    return "login page";
+})->name("login");
+
+Route::get("/score/{word}/{platform?}",
+    [SearchController::class, "getWordPopularity"])
+    ->middleware("client");
